<resources>
    <string name="app_name">Coroutines</string>
    <string name="start_job">Start Job</string>
    <string name="Cancelj">Cancel Job</string>
    <string name="join_tasks">Join Tasks</string>
    <string name="hashmap">HashMap</string>
    <string name="null_now">Null Now</string>
    <string name="add">Add</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
</resources>