<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HashMapDemo">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel1"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_vertical">

        <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/keyEdit"
            android:hint="@string/key"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:inputType="textAutoCorrect"
            android:importantForAutofill="no" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/keyEdit"
            android:layout_toRightOf="@id/keyEdit"
            android:layout_marginStart="30dp"
            android:id="@+id/ValueEdit"
            android:hint="@string/value"
            android:inputType="textAutoCorrect"
            android:importantForAutofill="no" />

    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/addItem"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/add"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/updateItem"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/update"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/removeItem"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/remove"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:gravity="center_horizontal" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/allText"
        android:layout_gravity="center"
        android:text="@string/null_now"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:textColor="#000"
        />
</LinearLayout>